// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileInput renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-fubCzh hsvamz"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-m9hood-0 cTSHiS"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gySsHC FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bDhrKg"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 bxDqkG"
            disabled=""
            type="file"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-fubCzh hsvamz"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-m9hood-0 cTSHiS"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 exeki FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bDhrKg"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 iIgwzP"
            type="file"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-fubCzh hsvamz"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-m9hood-0 cTSHiS"
    >
      <span
        class="StyledText-sc-1sadyjn-0 cTuErc"
      >
        This is a very cool input
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 exeki FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bDhrKg"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 iIgwzP"
            type="file"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput renders an input with a label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-fubCzh hsvamz"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-m9hood-0 cTSHiS"
    >
      <label
        class="StyledText-sc-1sadyjn-0 lPqQk"
        for="input"
      >
        Some input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 exeki FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bDhrKg"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 iIgwzP"
            id="input"
            type="file"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-fubCzh hsvamz"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-m9hood-0 cTSHiS"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bxqGsO FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bDhrKg"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 iIgwzP"
            type="file"
            value=""
          />
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 boCmmO"
      >
        You failed at this
      </span>
    </div>
  </div>
</div>
`;

exports[`FileInput renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-fubCzh hsvamz"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-m9hood-0 cTSHiS"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 exeki FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bDhrKg"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 iIgwzP"
            type="file"
            value=""
          />
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 kwoXLv"
      >
        You can set a cool value
      </span>
    </div>
  </div>
</div>
`;
